Changed title, adjusted font size for footer

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Welcome to the official website of Royal Air Force 9456."
+      content="Welcome to the official website of Warwickshire Royal Air Force 9456."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/raf9456thumbnail.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Royal Air Force 9456</title>
+    <title>Warwickshire Royal Air Force 9456</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
